2008-01-03 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  * src/confirmation.c:
  * src/display_playlists.c:

    A bit more UI polish in the main window. Sane defaults for pane sizes.
  
2008-01-03  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* data/icons/hicolor/*:
	  ignore generated Makefiles

2008-01-03 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  
    Killed prefs_window.
	
  * src/prefs_window.c -> src/sort_window.c:
  * src/prefs_window.h -> src/sort_window.h:
  
    Removed all prefs_window code.
	Renamed.

  * src/display_sorttabs.c:
  * data/gtkpod.glade:

    Retouched Calendar dialog, migrated from GtkCombo to GtkComboBox.

  * src/file_itunesdb.c:
  
    write_extended_info is now ignored (always true).

  * src/display_playlists.c:
  
    mpl_autoselect is now ignored (always false).
	Use larger icons in the playlist tree view.

  * src/display_tracks.c:
  
    multi_edit_title is now ignored (always true).
	Find-as-you-type search implemented using GtkTreeModelFilter.
	(Remember to use get_model instead of gtk_tree_view_get_model)
	
  * src/prefsdlg.c:
  * data/gtkpod.glade:
  
    Added "Display tooltips" preference.
	
  * data/Makefile.am:
  * data/*.png:
  * data/icons/hicolor/*:
  
    Icon refresh. Removed unused icons.
	
  * src/stock_icons.c:
  * src/stock_icons.h:
  
    Use GtkIconTheme for stock icon handling.
	
  * src/misc.c:
  * src/misc.h:
  
    Added utf8_strcasestr (a copied g_utf8_strcasestr from GtkSourceView).
	
  * src/help.c:
  
    Translation string optimization, as suggested by Daniele Forsi and
	Bastien Nocera <hadess@hadess.net>.

2008-01-02 Matvey Kozhev <sikon at users.sourceforge.net>

  * src/prefs.c:
  * src/prefs.h:
  
    Added function temp_prefs_copy_prefs to create copies of the current prefs
	(for Revert buttons).
	
  * src/prefsdlg.c:
  * data/gtkpod.glade:
  
    Added Revert button.